--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="{{ url_for('about_me') }}">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('skills') }}">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,10 +38,10 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('contact_me') }}">Contact</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Contact</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('create_new_project') }}">Add Project</a>
+                        <a class="nav-link" href="#">Add Project</a>
                       </li>
                     </ul>
                   </div>
