--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,29 +2,25 @@
 
 {% block content %}
         <section class="header">
-            <h1>Python Title</h1>
-            <p>Jan 2021</p>
-            <a href="#" class="github-btn">
+            <h1> {{ project.title }}</h1>
+            <p> {{ readable_date }}</p>
+            <a href=" {{ project.github_link }}" class="github-btn">
                 <i class="fab fa-github"></i>
                 View on GitHub
             </a>
             <ul class="project-skills">
+                {% for skill in individual_skill %}
                 <div>
-                    <li>Catching exceptions</li>
-                    <li>Creating a loop</li>
-                    <li>Accepting user input</li>
-                    <li>Conditional statements</li>
+                    <li> {{ skill }} </li>
                 </div>
+                {% endfor %}
             </ul>
         </section>
         <section id="project-desc">
             <div id="triangle5"></div>
             <h2>Description</h2>
             <p>
-                Lemon drops muffin macaroon pastry sweet muffin soufflé. 
-                Chocolate cake sesame snaps gummi bears tiramisu toffee. 
-                Ice cream toffee marshmallow sugar plum croissant chupa chups powder. 
-                Cotton candy sweet caramels pastry candy.
+                {{ project.description }}
             </p>
             <div id="triangle6"></div>
         </section>
