This commit will complete the /project/<id>/edit route.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,12 +35,14 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   Projects
                                 </a>
+                                {% for project in projects %}
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                  <li><a class="dropdown-item" href="#project1">Project 1</a></li>
-                                  <li><a class="dropdown-item" href="#project2">Project 2</a></li>
+                                  <li><a class="dropdown-item" href="{{ url_for('show_detail_of_project', id=project.id) }}">{{ project.title }}</a></li>
+                                  <!-- <li><a class="dropdown-item" href="#project2">Project 2</a></li>
                                   <li><a class="dropdown-item" href="#project3">Project 3</a></li>
-                                  <li><a class="dropdown-item" href="#project4">Project 4</a></li>
+                                  <li><a class="dropdown-item" href="#project4">Project 4</a></li> -->
                                 </ul>
+                                {% endfor %}
                               </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('contact_me') }}">Contact</a>
