This commit will update copy on the index, skills, and about html files.

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,8 @@
 
 {% block content %}
         <section class="header">
-            <h1>Your Name</h1>
-            <p>Your current goal. (Job, freelance, etc)</p>
+            <h1>Asher Orr</h1>
+            <p>Seeking work in Python Development</p>
             <!--I would suggest choosing a different picture here.-->
             <!--Like maybe a hobby photo-->
             <img src="https://cdn.pixabay.com/photo/2020/09/04/12/32/kayak-5543935_1280.jpg" alt="Headshot of myself">
@@ -11,28 +11,18 @@
         <section id="about-page">
             <div id="triangle7"></div>
             <div id="triangle8"></div>
-            <h2>Section Title</h2>
+            <h2>More About Me</h2>
             <p>
-                Soufflé cupcake cupcake. 
-                Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-                Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-                Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-                Muffin sweet roll bonbon. 
-                Carrot cake gummies cheesecake. 
-                Gummi bears powder apple pie. 
-                Topping cake powder. 
-                Pastry chupa chups caramels.
+                I graduated from Treehouse's Python TechDegree program in 2022, where I earned exceeds expectations
+                on all projects.
             </p>
             <p>
-                Soufflé cupcake cupcake. 
-                Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-                Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-                Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-                Muffin sweet roll bonbon. 
-                Carrot cake gummies cheesecake. 
-                Gummi bears powder apple pie. 
-                Topping cake powder. 
-                Pastry chupa chups caramels.
+                I was previously an English teacher in Atlanta.
+                I served as my school's lead innovator representative and the Georgia TAPP (Teacher Academy for Preparation and Pedagogy)
+                representative for the state's largest school district.
+            </p>
+            <p>
+                I am interested in programming, finance, language learning, yoga, Brazilian Jiu Jitsu, and holistic health.
             </p>
             <a href="#"><i class="far fa-file"></i>Resume</a>
         </section>
