--- a/templates/skills.html
+++ b/templates/skills.html
@@ -9,6 +9,7 @@
                 <li>Python</li>
                 <li>Flask</li>
                 <li>SQLAlchemy</li>
+                <li>Object-Oriented Programming</li>
                 <li>GitHub</li>
                 <li>Visual Studio Code</li>
             </ul>
