--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,16 @@
         </section>
         <section class="header">
             <h1>Python Developer</h1>
-            <p>A short one-liner about your love of coding.</p>
+            <p>Growing and learning each day!</p>
             <img src="https://cdn.pixabay.com/photo/2016/11/29/13/14/attractive-1869761_1280.jpg" alt="Headshot of myself">
         </section>
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-                Cake tart apple pie soufflé sweet sweet. 
-                Topping bear claw lemon drops gingerbread 
-                biscuit pudding fruitcake icing chocolate bar.
+                I'm looking for work in Python development! In addition to programming,
+                I'm interested in FinTech, language learning
+                (I'm currently learning Spanish), yoga, and
+                Brazilian Jiu Jitsu.
             </p>
             <div id="triangle1"></div>
             <div id="triangle2"></div>
@@ -26,6 +25,7 @@
                 <li>Python</li>
                 <li>Flask</li>
                 <li>SQLAlchemy</li>
+                <li>Object-Oriented Programming</li>
                 <li>GitHub</li>
                 <li>Visual Studio Code</li>
             </ul>
