This commit will make all hyperlinks (excluding the navbar) open in a new tab.

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,6 +24,6 @@
             <p>
                 I am interested in programming, finance, language learning, yoga, Brazilian Jiu Jitsu, and holistic health.
             </p>
-            <a href="#"><i class="far fa-file"></i>Resume</a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="far fa-file"></i>Resume</a>
         </section>
 {% endblock %}
