--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,17 +54,17 @@
         <section class="footer">
             <div class="socials">
                 </a>
-                <a href="https://github.com/asherorr">
+                <a href="https://github.com/asherorr" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/asherorr">
+                <a href="https://www.linkedin.com/in/asherorr" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <div class="treehouse">
                 <p>
                     Front-End Designed by
-                    <a href="https://teamtreehouse.com">
+                    <a href="https://teamtreehouse.com" target="_blank" rel="noopener noreferrer">
                         Treehouse
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 229.75 249.54">
                             <defs>
