--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,7 +4,7 @@
         <section class="header">
             <h1> {{ project.title }}</h1>
             <p> {{ readable_date }}</p>
-            <a href=" {{ project.github_link }}" class="github-btn">
+            <a href=" {{ project.github_link }}" target="_blank" rel="noopener noreferrer" class="github-btn">
                 <i class="fab fa-github"></i>
                 View on GitHub
             </a>
