--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
             {% for project in projects %}
             <div id="project-list">
                 <div id="project1" class="a-project">
-                    <h3><a href="{{ url_for('show_detail_of_project', id=project.id) }}">{{ project.title }}</a></h3>
-                    <a href="{{ project.github_link }}" class="github-btn">
+                    <h3><a href="{{ url_for('show_detail_of_project', id=project.id) }}" target="_blank" rel="noopener noreferrer">{{ project.title }}</a></h3>
+                    <a href="{{ project.github_link }}" target="_blank" rel="noopener noreferrer" class="github-btn">
                         <i class="fab fa-github"></i>
                         View on GitHub
                     </a>
