This commit will remove a section in the about.html file.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-        <section class="header">
+        <!-- <section class="header">
             <h1>Asher Orr</h1>
             <p>Seeking work in Python Development</p>
-            <!--I would suggest choosing a different picture here.-->
-            <!--Like maybe a hobby photo-->
-            <img src="https://cdn.pixabay.com/photo/2014/11/23/21/22/snake-543243__340.jpg" alt="Headshot of myself">
-        </section>
+            <img src="https://cdn.pixabay.com/photo/2014/11/23/21/22/snake-543243__340.jpg" alt="Headshot of myself"> -->
+        <!-- </section> -->
         <section id="about-page">
             <div id="triangle7"></div>
             <div id="triangle8"></div>
