This commit will add a resume link to the about.html page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,6 +22,6 @@
             <p>
                 I am interested in programming, finance, language learning, yoga, Brazilian Jiu Jitsu, and holistic health.
             </p>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="far fa-file"></i>Resume</a>
+            <a href="https://docs.google.com/document/d/14FoB_rlec1p675bhME6zi0xhKMA8_VyIj-mi2NEBQZ4/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><i class="far fa-file"></i>Resume</a>
         </section>
 {% endblock %}
