--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <section class="header">
             <h1>Python Developer</h1>
             <p>Growing and learning each day!</p>
-            <img src="https://cdn.pixabay.com/photo/2019/11/23/14/52/rattlesnake-4647318__480.jpg" alt="Headshot of myself">
+            <img src="https://avatars.githubusercontent.com/u/103453685?v=4" alt="Headshot of myself">
         </section>
         <section id="about">
             <h2>About Me</h2>
